--- a/index.html
+++ b/index.html
@@ -9,10 +9,23 @@
 <body>
     <h1>Maxence Lhuillier</h1>
     <h2>Developeur</h2>
-    <h5>kuyjthrge</h5>
+    <h6>kuyjthrge</h6>
     <h4>TELECHARGER CV</h4>
     <h4>ME CONTACTER</h4>
     <h3>EXPERIENCE</h3>
+    <h4>Hôte de caisse</h4>
+    <h5>Super U - Vernou-sur-brenne</h5>
+    <h5>31 octobre 2019 - 19 aout 2020</h5>
+    <h3>COMPETENCES</h3>
+    <h4><g>Logiciels :</g></h4>
+    <h5>JAVA</h5>
+    <h5>PYTHON</h5>
+    <h5>HTML</h5>
+    <h5>CSS</h5>
+    <h4><g>Langues :</g></h4>
+    <h5>Français</h5>
+    <h5>Anglais</h5>
+    <h5>Espagnol</h5>
 </body>
 
 </html>
