--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 <body>
     <h1>Maxence Lhuillier</h1>
     <h2>Developeur</h2>
-    
+    <img src="images/GooglePlus-logo-with-brush-PNG.png">
+    <img src="images/Instagram-logo-with-brush-PNG.png">
+    <img src="images/Linkedin-logo-with-brush-PNG.png">
     <h4>TELECHARGER CV</h4>
     <h4>ME CONTACTER</h4>
     <h3>EXPERIENCE</h3>
