--- a/index.html
+++ b/index.html
@@ -15,30 +15,30 @@
         <div class="job">
             <h2>Developeur</h2>
         </div>
-        <img src="images/GooglePlus-logo-with-brush-PNG.png">
-        <img src="images/Instagram-logo-with-brush-PNG.png">
-        <img src="images/Linkedin-logo-with-brush-PNG.png">
-        <h4>TELECHARGER CV</h4>
-        <h4>ME CONTACTER</h4>
+        <img src="images/GooglePlus-logo-with-brush-PNG.png" alt="logo google+">
+        <img src="images/Instagram-logo-with-brush-PNG.png" alt="logo instagram">
+        <img src="images/Linkedin-logo-with-brush-PNG.png" alt="logo linkedin">
+        <h4><span class="liens">TELECHARGER CV
+                ME CONTACTER</span></h4>
         <h3>EXPERIENCE</h3>
-        <h4>Hôte de caisse</h4>
-        <h5>Super U - Vernou-sur-brenne</h5>
-        <h5>31 octobre 2019 - 19 aout 2020</h5>
+        <h4><span class="caisse">Hôte de caisse</span></h4>
+        <h5><span class="date"> U - Vernou-sur-brenne
+                31 octobre 2019 - 19 aout 2020</span></h5>
         <h3>COMPETENCES</h3>
         <h4>
-            <g>Logiciels :</g>
+            Logiciels :
         </h4>
-        <h5>JAVA</h5>
-        <h5>PYTHON</h5>
-        <h5>HTML</h5>
-        <h5>CSS</h5>
+        <h5><span class="list_logi">JAVA<br>
+                PYTHON<br>
+                HTML<br>
+                CSS<br></span></h5>
+        <div class="lang"></div>
         <h4>
-            <g>Langues :</g>
+            Langues :
         </h4>
-        <h5>Français</h5>
-        <h5>Anglais</h5>
-        <h5>Espagnol</h5>
+        <h5><span class="list_lang">Français<br>
+                Anglais<br>
+                Espagnol<br></span></h5>
     </div>
 </body>
-
 </html>
