add button in css

--- a/index.html
+++ b/index.html
@@ -12,33 +12,17 @@
         <div class="nom">
             <h1>Maxence Lhuillier</h1>
         </div>
-        <div class="job">
-            <h2>Developeur</h2>
-        </div>
         <img src="images/GooglePlus-logo-with-brush-PNG.png" alt="logo google+">
         <img src="images/Instagram-logo-with-brush-PNG.png" alt="logo instagram">
         <img src="images/Linkedin-logo-with-brush-PNG.png" alt="logo linkedin">
-        <h4><span class="liens">TELECHARGER CV
-                ME CONTACTER</span></h4>
-        <h3>EXPERIENCE</h3>
-        <h4><span class="caisse">Hôte de caisse</span></h4>
-        <h5><span class="date"> U - Vernou-sur-brenne
-                31 octobre 2019 - 19 aout 2020</span></h5>
-        <h3>COMPETENCES</h3>
-        <h4>
-            Logiciels :
-        </h4>
-        <h5><span class="list_logi">JAVA<br>
-                PYTHON<br>
-                HTML<br>
-                CSS<br></span></h5>
-        <div class="lang"></div>
-        <h4>
-            Langues :
-        </h4>
-        <h5><span class="list_lang">Français<br>
-                Anglais<br>
-                Espagnol<br></span></h5>
+        <div class="wrap">
+            <button class="button">CV</button>
+        </div>
     </div>
+    </div>
+
+    </div>
+
 </body>
+
 </html>
