--- a/index.html
+++ b/index.html
@@ -12,17 +12,21 @@
         <div class="nom">
             <h1>Maxence Lhuillier</h1>
         </div>
-        <img src="images/GooglePlus-logo-with-brush-PNG.png" alt="logo google+">
-        <img src="images/Instagram-logo-with-brush-PNG.png" alt="logo instagram">
-        <img src="images/Linkedin-logo-with-brush-PNG.png" alt="logo linkedin">
+        <a href="https://myaccount.google.com/?utm_source=OGB&tab=rk&utm_medium=app" target="_blank">
+            <img src="images/GooglePlus-logo-with-brush-PNG.png" alt="logo google+">
+        </a>
+        <a href="https://www.instagram.com/lhmaxence/" target="_blank">
+            <img src="images/Instagram-logo-with-brush-PNG.png" alt="logo instagram">
+        </a>
+        <a href="https://www.linkedin.com/in/maxence-lhuillier-35108b1b9/" target="_blank">
+            <img src="images/Linkedin-logo-with-brush-PNG.png" alt="logo linkedin">
+        </a>
         <div class="wrap">
             <button class="button">CV</button>
         </div>
     </div>
     </div>
-
     </div>
-
 </body>
 
 </html>
