--- a/page_cv.html
+++ b/page_cv.html
@@ -4,7 +4,7 @@
 <head>
     <title>CV Lhuillier</title>
     <meta charset="utf-8">
-    <link href="format.css" rel="stylesheet" type="text/css" />
+    <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
@@ -22,8 +22,8 @@
             </div>
             <div class="information">
                 <article>
-                    <h3><i>Adresse: </i><b>9 Rue de Villoutreys</b>
-                        <br><i>07-81-53-51-19</i><br>
+                    <h3><i>Adresse: </i><b>X Rue de X</b>
+                        <br><i>07-81-XX-XX-XX</i><br>
                         <br><i>maxence.lhuillier@campus.academy<br>
                             lh.maxence@live.fr</i></h3>
                 </article>
