--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <img src="images/Linkedin-logo-with-brush-PNG.png" alt="logo linkedin">
         </a>
         <div class="wrap">
-            <a href="C:\Users\lhmax\OneDrive\Documents\cours CA\html-css\projet\projet2_html_cv\page_cv.html" target="_blank">
+            <a href="page_cv.html" target="_blank">
                 <button class="button">CV</button>
             </a>
         </div>
