--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
         </a>
         <div class="wrap">
             <a href="page_cv.html" target="_blank">
-                <button class="button">CV</button>
+                <button class="button">
+                    CV
+                </button>
             </a>
         </div>
     </div>
