--- a/index.html
+++ b/index.html
@@ -22,10 +22,8 @@
             <img src="images/Linkedin-logo-with-brush-PNG.png" alt="logo linkedin">
         </a>
         <div class="wrap">
-            <a href="page_cv.html" target="_blank">
-                <button class="button">
+            <a class="button" href="page_cv.html" target="_blank">
                     CV
-                </button>
             </a>
         </div>
     </div>
