--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <img src="images/Linkedin-logo-with-brush-PNG.png" alt="logo linkedin">
         </a>
         <div class="wrap">
-            <a class="button" href="page_cv.html" target="_blank">
+            <a id="button" class="button" href="page_cv.html" target="_blank">
                     CV
             </a>
         </div>
