--- a/page_cv.html
+++ b/page_cv.html
@@ -25,7 +25,8 @@
                     <h3><i>Adresse: </i><b>X Rue de X</b>
                         <br><i>07-81-XX-XX-XX</i><br>
                         <br><i>maxence.lhuillier @campus.academy<br>
-                            lh.maxence @live.fr</i></h3>
+                            lh.maxence @live.fr</i>
+                    </h3>
                 </article>
             </div>
         </div>
