--- a/page_cv.html
+++ b/page_cv.html
@@ -57,21 +57,29 @@
             <div class="sous-titres">
                 <span><b><i><br>Compétences :</i></b></span>
             </div>
-            <article>
-                <h4>
-                    python:<br>
-                    java:<br>
-                </h4>
-            </article>
+            <p>python</p>
+            <div class="container">
+                <div class="skills html">90%</div>
+            </div>
+            <p>java</p>
+            <div class="container">
+                <div class="skills html">90%</div>
+            </div>
+            <p>php</p>
+            <div class="container">
+                <div class="skills html">90%</div>
+            </div>
             <div class="sous-titres">
                 <span><b><i><br>Langues :</i></b></span>
             </div>
-            <article>
-                <h4>
-                    anglais:<br>
-                    español:
-                </h4>
-            </article>
+            <p>anglais</p>
+            <div class="container">
+                <div class="skills html">90%</div>
+            </div>
+            <p>español</p>
+            <div class="container">
+                <div class="skills html">90%</div>
+            </div>
         </div>
     </div>
 </body>
