--- a/page_cv.html
+++ b/page_cv.html
@@ -58,27 +58,27 @@
                 <span><b><i><br>Compétences :</i></b></span>
             </div>
             <p>python</p>
-            <div class="container">
-                <div class="skills html">90%</div>
+            <div class="pourcentages">
+                <div class="skills python">90%</div>
             </div>
             <p>java</p>
-            <div class="container">
-                <div class="skills html">90%</div>
+            <div class="pourcentages">
+                <div class="skills java">90%</div>
             </div>
             <p>php</p>
-            <div class="container">
-                <div class="skills html">90%</div>
+            <div class="pourcentages">
+                <div class="skills php">90%</div>
             </div>
             <div class="sous-titres">
                 <span><b><i><br>Langues :</i></b></span>
             </div>
             <p>anglais</p>
-            <div class="container">
-                <div class="skills html">90%</div>
+            <div class="pourcentages">
+                <div class="skills anglais">90%</div>
             </div>
             <p>español</p>
-            <div class="container">
-                <div class="skills html">90%</div>
+            <div class="pourcentages">
+                <div class="skills español">90%</div>
             </div>
         </div>
     </div>
