--- a/page_cv.html
+++ b/page_cv.html
@@ -36,9 +36,9 @@
             <div class="pourcentages">
                 <div class="skills anglais">60%</div>
             </div>
-            <p>español</p>
+            <p>espagnol</p>
             <div class="pourcentages">
-                <div class="skills español">30%</div>
+                <div class="skills espagnol">30%</div>
             </div>
         </div>
         <div class="droite">
